# AuditAtlas

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: doc-sync-agent.md  pr-review-agent.md  synthetic-audit-doc-gen.md  unit-test-agent.md
.claude/commands/: doc-sync.md  synthetic-audit-doc-gen.md  unit-test.md
.claude/plans/: FEATURE-003-TASK-1-schema-design.md  FEATURE-003-TASK-2-chunking-strategy.md  FEATURE-003-TASK-3-citation-strategy.md  FEATURE-003-TASK-4-query-routing.md  FEATURE-003-TASK-5-code-implementation.md  FEATURE-003-knowledge-engineering.md  FEATURE-004-data-ingestion.md  FEATURE-004-hybrid-approach.md  FEATURE-005-TASK-1-core-retriever.md  FEATURE-005-TASK-2-metadata-filtering.md  FEATURE-005-TASK-3-router-integration.md  FEATURE-005-TASK-4-cli-tests-docs.md  FEATURE-005-retrieval-system.md  FEATURE-006-TASK-1-llm-client-answer-generator.md  FEATURE-006-TASK-2-research-workflow.md  FEATURE-006-TASK-3-cli-tests-docs.md  FEATURE-006-agentic-research-workflow.md  ci-speedup-and-optin-review.md  code-cleanup-fixtures-and-trivials.md  research-env-support.md
.github/workflows/: ci.yml  code-review.yml  run_review.py
data/knowledge_base/: chunks.jsonl  index.db
docs/: 01_project_overview.md  01_project_vision.md  02_problem_statement.md  02_product_plan.md  03_project_plan.md  03_target_users.md  04_core_features.md  04_knowledge_sources.md  05_success_metrics.md
plans/: FEATURE-004-TASK-2.md  FEATURE-004-TASK-3.md  FEATURE-004-TASK-4.md
src/ingestion/: __main__.py  (+1 more)
tests/: test_citation.py  test_router.py
(+63 files in other folders)
