[project]
name = "auditatlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "python-frontmatter>=1.0.0",
    "pypdf>=3.0.0",
    "anthropic>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
